Add: phase1 로컬 환경 H2 database 연동 [#1]

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,6 @@
 spring:
   application:
     name: weather
-    
-logging:
-  level:
-    org.springframework.batch: DEBUG
+  profiles:
+    active: local
+
