--- a/build.gradle
+++ b/build.gradle
@@ -40,6 +40,7 @@ dependencies {
 	// DB
 	runtimeOnly 'com.h2database:h2'
 	runtimeOnly 'org.postgresql:postgresql'
+	runtimeOnly 'com.microsoft.sqlserver:mssql-jdbc'
 	
 	// Test
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
