Add: 로컬, H2 환경 로컬 테스트를 위한 yml 수정 [#8]

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,5 +2,9 @@ spring:
   application:
     name: weather
   profiles:
+    group:
+      local:
+        - local
+        - api
     active: local
 
