--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -1,14 +1,16 @@
 spring:
   datasource:
     driver-class-name: org.h2.Driver
-    url: jdbc:h2:mem:test
+    url: jdbc:h2:tcp://host.docker.internal:9092/~/test
     username: sa
     password:
 
   h2:
     console:
       enabled: true
-      path: /h2-console
+      path: /h2-
+      settings:
+        web-allow-others: true
 
   logging:
     level:
