--- a/build.gradle
+++ b/build.gradle
@@ -29,19 +29,15 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-webflux'
 	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.3'
 	
-	// Google Sheets API
-	implementation 'com.google.api-client:google-api-client:2.2.0'
-	implementation 'com.google.oauth-client:google-oauth-client-jetty:1.34.1'
-	implementation 'com.google.apis:google-api-services-sheets:v4-rev20220927-2.0.0'
-	
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 	
 	// DB
 	runtimeOnly 'com.h2database:h2'
 	runtimeOnly 'org.postgresql:postgresql'
-	runtimeOnly 'com.microsoft.sqlserver:mssql-jdbc'
-	
+	implementation 'com.microsoft.sqlserver:mssql-jdbc:12.2.0.jre11'
+	implementation 'com.microsoft.azure:msal4j:1.13.3'
+
 	// Test
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'io.projectreactor:reactor-test'
