Add: Azure 접근용 applcation.yml 수정 [#1]

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,5 +6,8 @@ spring:
       local:
         - local
         - api
-    active: local
+      prod:
+        - prod
+        - api
+    active: prod
 
